# Meeting-Notes-AI-

./: .gitignore  LICENSE  Launch.vbs  README.md  index.html  metadata.json  package-lock.json  package.json  requirements.txt  vite.config.ts
docs/: SECURITY_REVIEW.md
electron/: main.cjs
import/: Launch.bat  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  launch.pyw  pyproject.toml  run.py  ui.py
import/docs/: RELEASE_READINESS_REPORT.md
import/packaging/: MeetingNotesAI.spec
import/scripts/: create_icon.py
import/src/meeting_notes_ai/: summarizer.py  transcriber.py
import/src/meeting_notes_ai/ui/: sidebar.py  styles.py  todo_manager.py  views.py
packaging/: MeetingNotesAI.iss  README.md
scripts/: create_shortcut.ps1  e2e_handoff_test.py
src/: App.tsx  index.css  store.ts
src/components/: DashboardView.tsx  RecordView.tsx  SettingsView.tsx  TodosView.tsx
src/lib/: db.ts
src/meeting_notes_ai/: __init__.py  audio.py  config.py  main.py  notes.py
src/meeting_notes_ai/ui/: __init__.py  app.py
tests/: test_notes.py  test_smoke.py  test_ui_responsive.py
